main.css
html {
    position: relative;
    min-height: 100%;
}

body {
    margin-top: 56px;
    margin-bottom: 80px;
    background-color: #d3d3d3;
    overflow: auto;
}

.header {
    top: 0;
    width: 100%;
    background-color: black;
}

.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    background-color: black;
    padding-top: 10px;
    margin-top: 56px;
    text-align: center;
}

.footer-content {
    color: #7f7f7f;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

.content-wrap {
    position: relative;
}

.container {
    overflow: auto;
}

.card {
    background-color: #C5C5C5;
}

.top-of-page {
    margin-top: 20px;
}

.navbar {
    padding-left: 0;
    background-color: black;
}

.bg-colour {
    background-color: black;
}

.navbar-expand-lg {
    background-color: black;
}

/*.navbar .navbar-nav > .nav-item > a,
.navbar .navbar-nav > .nav-item > a:hover,
.navbar .navbar-nav > .nav-item > a:focus,
.navbar .navbar-nav > .nav-item > a:active {
    border-bottom: 1px solid white;
}

.navbar .navbar-nav > .nav-item > a:hover {
    border-bottom: 1px solid #7f7f7f;
}
*/

.section-heading {
    width: 100%;
    border-bottom: 2px solid black;
    margin-top:0;
	padding: 5px;
	background: #66CD00;
	font-size: 25px;
	font-weight: bold;
	width: 100%;
	color: white;
	border-top-right-radius: 15px 10px;
	border-top-left-radius: 15px 10px;
	text-align: center;
}

.content-section1, .content-section2, .content-section3 {
    padding-top: 56px;
}

.content-section3 {
    margin-bottom: 56px;
}

.jumbotron {
    background-color: #d3d3d3;
    margin-bottom: 0px;
    padding-bottom: 64px;
    padding-top: 120px;
}

.content-divider {
    border: 0;
    height: 1px;
    background: #0069ff;
}

.vl {
    border-left: 1px solid white;
    height: 10px;
}

.fa {
    padding: 5px;
    font-size: 30px;
    width: 40px;
    text-align: center;
    text-decoration: none;
    margin-right: 10px;
}

.fa:hover {
    opacity: 0.9;
    text-decoration: none;
    color: white;
}

.fa-linkedin {
    background: black;
    color: #7f7f7f;
}

.fa-instagram {
    background: black;
    color: #7f7f7f;
}

.fa-twitter {
    background: black;
    color: #7f7f7f;
}

.fa-github {
    background: black;
    color: #7f7f7f;
}

.fa-cv {
    background: black;
    color: #7f7f7f;
    font-size: 30px;
    font-family: Arial, Helvetica, sans-serif;
}

.btn {
    background-color: black;
    color: #7f7f7f;
    border-color: black;
}

.btn.btn-primary:hover {
    color: white;
    background-color: black;
    border-color: black;
}

.btn.btn-primary:focus {
    color: blue;
    background-color: black;
    border-color: black;
}

textarea {
	padding: 1px;
	resize: none;
}

div.buttongroup {
	margin-top: 20px;
    margin-bottom: 20px;
}

.card-title-custom {
    margin-left: auto;
    margin-right: auto;
    margin-top: 4px;
    margin-bottom: 4px;
}

#error {
	margin-left: 15px;
	margin-top: 10px;
	visibility: hidden;
	display: none;
	width: 300px;
}

#error p{
	margin: 0 0 5px 0;
	background: red;
	border: 1px solid #990000;
	color: white;
}

#footer-btn {
    margin-left: auto;
    margin-right: auto;
}

.btn-social-group {
    margin-bottom: 10px;
}

